src/assets/markdown.css
.markdown-body {
  display: flex;
  flex-direction: column;
  gap: 5px;
  font-size: 16px;
}

.markdown-body h1 {
  font-family: 'TextBold';
  font-weight: bold;
  font-size: 36px;
  text-align: center;
}

.markdown-body h2 {
  font-family: 'TextBold';
  font-weight: bold;
  font-size: 30px;
}

.markdown-body h3 {
  font-family: 'TextBold';
  font-weight: bold;
  font-size: 24px;
}

.markdown-body h4 {
  font-family: 'TextBold';
  font-weight: bold;
  font-size: 20px;
}

.markdown-body h5 {
  font-family: 'TextBold';
  font-weight: bold;
  font-size: 18px;
}

.markdown-body strong {
  font-family: 'TextBold';
  font-weight: bold;
}

.markdown-body blockquote {
  color: #777777;
  padding: 0 10px;
  border-left: solid;
  border-left-color: #dfe2e5;
  border-left-width: 5px;
}

.markdown-body blockquote .katex {
  color: #777777;
}

.katex-display {
  margin: 0 !important;
  font-size: 16px;
}

table {
  border-collapse: collapse;
  width: 100%;
  border-radius: 6px;
}

th,
td {
  border: 1px solid #dae2eb;
  padding: 8px;
  text-align: left;
}

th {
  background-color: #f6f8fa;
  font-family: 'TextBold';
}

img {
  max-width: 80%;
}

.markdown-body hr {
  border: 1px solid rgb(222, 228, 240);
}

